# backend

./: Cargo.toml  Dockerfile  README.md
crates/contracts/: Cargo.toml
crates/contracts/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: doe.rs  graph.rs  lib.rs  operators.rs  scoring.rs  status.rs
crates/engine/tests/: discover.rs
crates/engine/tests/golden/: board_alloys-v1.json  board_flotation-v1.json
crates/platform/: AGENTS.md  Cargo.toml
crates/platform/src/: lib.rs  main.rs  pack.rs  rerun.rs  routes.rs  state.rs  validate.rs
crates/platform/src/application/: benchmark.rs  board.rs  error.rs  export.rs  factories.rs  hypothesis.rs  mod.rs  ports.rs  readiness.rs  rerun.rs  roadmap.rs  run.rs  run_record.rs  trace.rs
crates/platform/src/domain/: annotate.rs  benchmark.rs  mod.rs  money.rs  readiness.rs  rerun.rs  roadmap.rs  snapshot.rs  trace.rs  validation.rs
crates/platform/src/infrastructure/: file_board_gateway.rs  file_diagnostics_source.rs  file_expert_hypotheses_gateway.rs  file_extract_source.rs  file_factory_repository.rs  file_pack_repository.rs  http_sidecar.rs  memory_run_repository.rs  mod.rs
crates/platform/src/web/: dto.rs  error.rs  handlers.rs  middleware.rs  mod.rs  router.rs
crates/platform/tests/: api.rs
