[package]
name = "engine"
version.workspace = true
edition.workspace = true

[dependencies]
contracts = { path = "../contracts" }
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
contracts = { path = "../contracts" }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
