[package]
name = "platform"
version.workspace = true
edition.workspace = true

[[bin]]
name = "platform"
path = "src/main.rs"

[dependencies]
contracts = { path = "../contracts" }
engine = { path = "../engine" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
petgraph = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
